# diplom

./: index.html
ODESolver/: Makefile.in  README.md  config.h  configure  configure.ac
ODESolver/doc/: report.tex
ODESolver/src/: Makefile.am  Makefile.in  bindings.cpp
ODESolver/src/examples/: Makefile.am  Makefile.in  main.cpp
ODESolver/src/solver/: Gauss.cpp  Gear.cpp  Gear.h  Helpers.h  Makefile.am  Makefile.in  Matrix.cpp  Matrix.h  Nordsieck.cpp  Nordsieck.h  Solver.h  Vector.cpp  Vector.h
TSDemo/: .gitignore  bower.json  gruntfile.js  index.html  package.json  tsd.json
TSDemo/Scripts/: App.ts  Bootstrap.ts  Config.ts  NormalDistribution.ts  Solver.ts  idd-ko.js  idd.d.ts  solver.d.ts
TSDemo/Scripts/PrecompiledScripts/: rightSide.js  rightSide106.js  solver.d.ts
TSDemo/Scripts/Workers/: bootWorker.ts  mainWorker.ts  odeWorker.ts
lib/solver/: js-solver.js
